Update spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,9 @@ body {
 	
 .orbit-wrapper { margin-bottom: 100px; }
 .orbit-caption div {
-	padding: 5px 5px 15px 5px;
+	padding: 0 5px 15px 5px;
 	text-align: left;
-	font-size: 16px;
+	font-size: 15px;
 	line-height: 1.5em;
 }
 .orbit-caption span {
